pxc/tests/test_03_interface/interf_constr2.px

namespace interf_ptr;
import io;

interface ifoo {
  function void m1() const;
}

struct foo : ifoo : {
  function void m1() const {
    io::println("m1");
  }
}

function void test2(ref{ifoo} x)
{
  x->m1();
}

struct bar {
  ref{ifoo} fp;
}

function void test1()
{
  bar b; // error: not default-constructible
  // ref{ifoo} f = foo();
  test2(b.fp);
}

test1();
